--- a/themes/draculaplus.theme.css
+++ b/themes/draculaplus.theme.css
@@ -32,6 +32,7 @@
   --dracula-accent-dark: #4c4b63 !important;
   --dracula-accent-light: #5c4081 !important;
   --dracula-secondary: #23232b !important;
+  --dracula-code: #23232A !important;
   --dracula-tertiary: var(--dracula-line-highlight) !important;
   --color-1: var(--dracula-cyan) !important;
   --color-2: var(--dracula-green) !important;
@@ -181,6 +182,7 @@
 
 code {
   color: var(--dracula-foreground) !important;
+  background-color: var(--dracula-code) !important;
 }
 
 span.hljs-built_in {
